Fixed transition jumping on some browsers

--- a/src/stylesheets/parts/_page.sass
+++ b/src/stylesheets/parts/_page.sass
@@ -27,6 +27,7 @@
       transform: translateY(-50%)
       opacity: 0
       transition: opacity 500ms
+      backface-visibility: hidden
       
       &.loaded
         opacity: 1
